welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  fleur()
  droite()
}

def fleur(){
	croix()
  point()
}

def croix(c:Color.YELLOW){
  setCouleurBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  gauche()
  avance()
  recule(2)
}

def point(){
  avance()
  setCouleurBrosse(Color.YELLOW)
  leveBrosse()
}